# cooking-assistant

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLEANUP_GUIDE.md  DESIGN_RATIONALE.md  Dockerfile  LICENSE  README.md  design-rationale.html  docker-compose.yml  evaluation-cheatsheet.html  genindex.html  getting-started.html  index.html  methodology-bayesian.html  methodology-classifier.html  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.txt  search.html  searchindex.js
.doctrees/: design-rationale.doctree  environment.pickle  evaluation-cheatsheet.doctree  getting-started.doctree  index.doctree  methodology-bayesian.doctree  methodology-classifier.doctree  reference.doctree
_modules/: index.html
_sources/: design-rationale.md.txt  evaluation-cheatsheet.md.txt  getting-started.md.txt  index.md.txt
analysis/: bayesian_parameters_docs_justification.md  generate_csv_to_analyse_for_parameter_justification.py
analysis_parameter_justification/: README_food_type_classifier_justification.md  bayesian_parameters_docs_justification.md  generate_csv_to_analyse_for_parameter_justification.py
app/: main.py  streamlit_app.py
cooking_assistant/: __init__.py  config.py
docs/: bayesian_parameters_docs_justification.md  conf.py  index.md  index.rst  methodology-bayesian.md  methodology-classifier.md  reference.rst
scripts/: 01_classifier_generator.py  __init__.py  analyze_seasonal_distribution.py  config.py  data_loader_preparation.py  enrich_metrics.py  example_calculate_rankings.py  import_raw_data_from_source.py  results_handler.py  score_calculator.py  season_distribution.py  test.ipynb  top_recipe_rankings.py  top_reviews_analyzer.py
source/: conf.py  index.rst
tests/: conftest.py  test_downloader_skip.py  test_enrich_metrics.py  test_loader_edges.py  test_processor_season_boundary.py  test_quadrants_and_correlation.py  test_results_missing_data.py  unit_tests.py
utils/: logger.py
(+58 files in other folders)
