[tool.poetry]
name = "project-mangetamain"
version = "0.1.0"
description = ""
authors = ["Lounis Hamroun <lounis.hamroun@gmail.com>, Alexandre Donnat <alexandredonnat1@gmail.com>, Omar Fekih <omarfh788@gmail.com>, Leo Ivars <ivars.leo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.13"}
black = "^25.9.0"
pylint = "^3.3.9"
sphinx = "^8.2.3"
numpy = "^2.3.3"
pandas = "^2.3.3"
pydantic = "^2.11.10"
myst-parser = {extras = ["linkify"], version = "^4.0.1"}
streamlit = "^1.50.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
