[tool.poetry]
name = "cooking-assistant"
version = "0.1.0"
description = ""
authors = [
    "Lounis Hamroun <lounis.hamroun@gmail.com>",
    "Alexandre Donnat <alexandredonnat1@gmail.com>",
    "Omar Fekih <omarfh788@gmail.com>",
    "Leo Ivars <ivars.leo@gmail.com>"
]
readme = "README.md"
packages = [
    { include = "cooking_assistant" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.12"
kagglehub = {extras = ["pandas-datasets"], version = "^0.3.13"}
black = "^25.9.0"
pylint = "^3.3.9"
sphinx = "^8.2.3"
numpy = "^2.3.3"
pandas = "^2.3.3"
pydantic = "^2.11.10"
myst-parser = {extras = ["linkify"], version = "^4.0.1"}
streamlit = "^1.50.0"
matplotlib = "^3.10.7"
scikit-learn = "^1.7.2"
pytest = "^8.4.2"
pytest-cov = "^5.0.0"
plotly = "^6.3.1"
python-json-logger = "^2.0.7"

[tool.poetry.extras]
docs = ["sphinx", "myst-parser", "sphinx-rtd-theme"]
logging-json = ["python-json-logger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --disable-warnings --cov=cooking_assistant --cov-report=term-missing --cov-fail-under=90"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
